updating home url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dkendrick.github.io",
-  "homepage": "https://dkendrick.github.com/dkendrick/dkendrick.github.com",
+  "homepage": "https://dkendrick.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
